...
                                    <subviews>
                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eal-U0-8j1">
                                            <rect key="frame" x="0.0" y="11" width="414" height="66"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0fR-YH-uPs">
                                                    <rect key="frame" x="21" y="8" width="245" height="50"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="cityLabel"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="50" id="azV-XT-xmW"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G15-SL-W3b">
                                                    <rect key="frame" x="324" y="9" width="82" height="49"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="tempLabel"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="82" id="ipK-VG-p46"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="YV3-uc-cQQ" id="SBe-7A-u53"/>
                            <outlet property="delegate" destination="YV3-uc-cQQ" id="eMm-Ru-rWz"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Weather Viewer" id="8DF-Ah-jeF">
                        <barButtonItem key="backBarButtonItem" title="  " id="kAG-Wi-XIq"/>
                        <barButtonItem key="rightBarButtonItem" image="plus" catalog="system" id="qok-S1-DZ0">
                            <connections>
                                <segue destination="ugG-uh-4ti" kind="presentation" id="NGO-6o-Qk5"/>
                            </connections>
                        </barButtonItem>
...
                                    <subviews>
                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Sq-v6-c4f">
                                            <rect key="frame" x="0.0" y="0.0" width="414" height="45.5"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JG1-NB-qFs">
                                                    <rect key="frame" x="266" y="8" width="134" height="28"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="valueLabel"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="134" id="u3N-IA-VZw"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yS9-Ll-fse">
                                                    <rect key="frame" x="8" y="4" width="217" height="37.5"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="propLabel"/>
                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                            <color key="backgroundColor" red="0.26199878329999998" green="0.56337857250000001" blue="0.56870309569999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
